--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>I'm <span>Available</span> for freelancing</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nam.</p>
+					<p>Let's create something remarkable together 👌</p>
 					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 				</div>
 			</div>
